--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,12 @@ sudo: required
 branches:
   only:
   - master
+before_install:
+- sudo apt-get -q update
+- sudo apt-get install sshpass
 before_script:
+  - chmod -R a+x scripts
   - npm install -g @angular/cli
 script:
-- ng build --prod 
+- ./scripts/travis-build.sh
+- ./scripts/travis-success.sh
