--- a/.travis.yml
+++ b/.travis.yml
@@ -14,3 +14,6 @@ before_script:
 script:
 - ./scripts/travis-build.sh
 - ./scripts/travis-success.sh
+after_success:
+  - echo Deploy to server $IP on branch $TRAVIS_BRANCH
+  - ./scripts/travis-deploy.sh
