--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,6 @@ Thumbs.db
 /.vs/ApiaryDiary-ClientApp/v16/*.suo
 /.vs/VSWorkspaceState.json
 /.vs/slnx.sqlite
+src/.vs/slnx.sqlite
+src/.vs/VSWorkspaceState.json
+src/.vs/src/v16/.suo
